to be continued...

--- a/google_store/www/index.html
+++ b/google_store/www/index.html
@@ -242,7 +242,7 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Part 2: Analyzing Traffic Data</h3>
+                <h3 class="subhead">Part 2: Exploring Traffic Data</h3>
                 <h1 class="display-2">How long does the consumer stay in our website?</h1>
             </div>
         </div> <!-- end section-header -->
