--- a/google_store/www/index.html
+++ b/google_store/www/index.html
@@ -243,7 +243,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Part 2: Exploring Traffic Data</h3>
-                <h1 class="display-2">How long does the consumer stay in our website?</h1>
+                <h1 class="display-2">How long does the consumer stay on our website?</h1>
             </div>
         </div> <!-- end section-header -->
       
@@ -293,14 +293,14 @@
                 <div class="testimonials">
 
                     <div class="testimonials__slide">
-                        <p> Our website is being visited mmostly via organic search. This means that most of our consumers or potential consumers are visiting our websites through unpaid search. Users visiting our website from a search engine's organic results have a very specific intent and if we can provide them with a solution or answer to their purpose, they are more likely to convert.</p>
+                        <p> Our website is being visited mostly via organic search. This means that most of our consumers or potential consumers are visiting our websites through unpaid search. Users visiting our website from a search engine's organic results have a very specific intent and if we can provide them with a solution or answer to their purpose, they are more likely to convert.</p>
                     </div>
                     <div class="testimonials__slide">
                         
-                        <p> Our home page has a bounce rate of approximately 30%. As an online merchandise store, we want our consumers to view more than one page, so having a high bounce rate is bad. In order to have low bounce rate, we need to enhance our user experience with out online merchandise store website. Also</p>
+                        <p> Our home page has a bounce rate of approximately 30%. As an online merchandise store, we want our consumers to view more than one page, so having a high bounce rate is bad. In order to have lower bounce rate, we need to enhance our user experience with our online merchandise store.</p>
                     </div>
                     <div class="testimonials__slide">                    
-                        <p> Most of our customers are using desktops to access our online merchandise store. This is most likely going to be the case since we dont have any apps that are available. Hence, enhancing the user experience via desktop should be important. It is also notworthy that October and November have low rate of returning visitors (RVR). This also means that we have more new visitors using our online store during this time period. </p>
+                        <p> Most of our consumers are using desktops to access our online merchandise store. This is most likely going to be the case since we dont have any apps available. Hence, enhancing the user experience via desktop should be important. It is also noteworthy that October and November have low rates of returning visitors (RVR), which means we have more new visitors using our online store during this period. </p>
                     </div>
 
                 </div><!-- end testimonials -->
@@ -323,7 +323,7 @@
             <div class="row section-header has-bottom-sep light-sep" data-aos="fade-up">
                 <div class="col-full">
                     <h3 class="subhead"> Part 3: Analysis during Holidays</h3>
-                    <h1 class="display-2 display-2--light"> Analysis on Devices, Pages, and Browser</h1>
+                    <h1 class="display-2 display-2--light"> Analyzing seasonality patterns</h1>
                     <h2><a href="styles.html">Coming Soon</a></h2>
                 </div>
             </div> <!-- end section-header -->
