--- a/google_store/www/index.html
+++ b/google_store/www/index.html
@@ -111,9 +111,7 @@
                 <h3>Problem Statement</h3>
 
                 <h1>
-                    How long does our consumer stay on our website?<br>
-                    Bounce Rate of our online store?<br>
-                    Through which channel is our consumer coming? <br>
+                    How can Google online merchandise store attract more consumers (by 50%) by improving online store’s user experience and coming up with better strategic planning based on analyzing seasonality patterns for the next calendar year? 
                 </h1>
                 
 
