--- a/google_store/www/styles.html
+++ b/google_store/www/styles.html
@@ -64,7 +64,7 @@
                 <h3>Navigation</h3>
                 
                 <ul class="header-nav__list">
-                    <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
+                    <li class="current"><a class="smoothscroll"  href="index.html" title="home">Home</a></li>
                     <li><a class="smoothscroll"  href="#about" title="about">Introduction</a></li>
                     <li><a class="smoothscroll"  href="#works" title="works">1. Summary</a></li>
                     <li><a class="smoothscroll"  href="#works" title="works">2. Traffic</a></li>
@@ -112,9 +112,7 @@
                 <h3>Problem Statement</h3>
 
                 <h1>
-                    How long does our consumer stay on our website?<br>
-                    Bounce Rate of our online store?<br>
-                    Through which channel is our consumer coming? <br>
+                    How can Google online merchandise store attract more consumers (by 50%) by improving online store’s user experience and coming up with better strategic planning based on analyzing seasonality patterns for the next calendar year? 
                 </h1>
 
                 <div class="home-content__buttons">
@@ -160,8 +158,7 @@
 
                 <h1 class="display-2">Conclusion</h1>
 
-                <p class="lead"> Based on the Exploratory Data Analysis above, we explored several traffic data regarding our Google online merchandise store by looking at bounce rates, cosumers' devices, channels, average hit numbers, average number of page views and so on,
-
+                <p class="lead"> Based on the Exploratory Data Analysis, hits and bounce rates are important indicators to look at to observe how our consumers interact with out website. It is also important to understand that many of our consumers are coming through organic search. Future work on analzying seasonality patterns and observing abnormalities for better strategic planning is also necessary as we saw some abnormalities in October and November.
                 </p>
 
             </div>
@@ -187,7 +184,7 @@
 
                 <h3>Future Projects</h3>
 
-                <p class="drop-cap">Due to time contstraint, I wasnt able to complete my seasonality analysis - observing seasonality patterns during holidays. In the future, I would like to annswer the following questions: Are there any abnormally high volume of traffic or transations before thanksgiving? If so, how many days? This can be important when it comes to strategic planning. 
+                <p class="drop-cap">Due to time contstraint, I wasnt able to complete my seasonality analysis - observing seasonality patterns during holidays. In the future, I would like to answer the following questions: Are there any abnormally high volume of traffic or transactions before thanksgiving? If so, how many days? This can be important when it comes to strategic planning. 
                 </p>
 
                 <h3>Data From...</h3>
